--- a/html/css/style.css
+++ b/html/css/style.css
@@ -9,7 +9,7 @@
 *,
 :after,
 :before {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 img {
@@ -427,6 +427,99 @@ textarea[type=text]:focus {
   line-height: 27px;
 }
 
+@media only screen and (min-width: 992px) {
+  .scheme_work .sheme_work_slider .swiper-wrapper {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px 42px;
+  }
+  .scheme_work .sheme_work_slider .swiper-slide {
+    width: calc(25% - 31.5px);
+  }
+  .scheme_work .scheme_work_1_pagination {
+    display: none;
+  }
+}
+.scheme_work .title {
+  color: #0B1F33;
+  text-align: center;
+  font-family: "Factor A", sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+.scheme_work .description {
+  color: #757F88;
+  text-align: center;
+  font-family: "Factor A", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  max-width: 646px;
+  margin: 0 auto 30px;
+}
+.scheme_work .sheme_work_slider {
+  margin-bottom: 50px;
+}
+.scheme_work .sheme_work_slider .slide_content {
+  background-image: url("../images/work_slide_bg.png");
+  background-size: cover;
+  background-position: right top;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  overflow: hidden;
+  padding: 25px 10px 22px 30px;
+  min-height: 270px;
+}
+.scheme_work .sheme_work_slider .slide_content img {
+  height: 60px;
+  width: auto;
+}
+.scheme_work .sheme_work_slider .slide_content .number {
+  color: #FFF;
+  font-family: "Factor A", sans-serif;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  position: absolute;
+  top: 33px;
+  right: 33px;
+}
+.scheme_work .sheme_work_slider .slide_content .slide_title {
+  color: #0B1F33;
+  font-family: "Factor A", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  margin: 20px 0px 8px;
+}
+.scheme_work .sheme_work_slider .slide_content .slide_description {
+  color: #757F88;
+  font-family: "Factor A", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+}
+.scheme_work .description_2 {
+  color: #0B1F33;
+  text-align: center;
+  font-family: "Factor A", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  max-width: 824px;
+  margin: 0 auto 100px;
+}
+
 .real_company {
   overflow: hidden;
   background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
@@ -462,13 +555,8 @@ textarea[type=text]:focus {
   position: relative;
   z-index: 2;
   padding-bottom: 133px;
-  display: flex;
-  align-items: center;
-  gap: 44px;
-  justify-content: space-between;
 }
 .real_company .main_container .real_company_cards .real_company_card {
-  flex: 1;
   padding: 25px 33px 30px 33px;
   border-radius: 12px;
   background: #FFF;
@@ -564,6 +652,7 @@ textarea[type=text]:focus {
 
 .about_services {
   background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+  overflow: hidden;
 }
 .about_services .main_container {
   position: relative;
@@ -581,7 +670,8 @@ textarea[type=text]:focus {
   width: 100%;
   opacity: 0.5;
   top: 50px;
-  white-space: 1nowrap;
+  white-space: nowrap;
+  text-align: center;
 }
 .about_services .main_container h2 {
   position: relative;
@@ -655,6 +745,7 @@ textarea[type=text]:focus {
 
 .partners {
   background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+  overflow: hidden;
 }
 .partners .main_container {
   position: relative;
@@ -672,7 +763,8 @@ textarea[type=text]:focus {
   width: 100%;
   opacity: 0.5;
   bottom: 55px;
-  white-space: 1nowrap;
+  white-space: nowrap;
+  text-align: center;
 }
 .partners .main_container h2 {
   position: relative;
@@ -1085,6 +1177,59 @@ textarea[type=text]:focus {
     line-height: 20.049px;
     margin-bottom: 15px;
   }
+  .scheme_work .main_container {
+    overflow: hidden;
+  }
+  .scheme_work .sheme_work_slider {
+    overflow: visible;
+    margin-bottom: 30px;
+  }
+  .scheme_work .scheme_work_1_pagination {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .scheme_work .scheme_work_1_pagination span {
+    opacity: 1;
+    margin: 0;
+    padding: 0;
+    width: 10px;
+    height: 10px;
+    background-color: #DFE6FE;
+  }
+  .scheme_work .scheme_work_1_pagination .swiper-pagination-bullet-active {
+    background-color: #1D5DEB;
+  }
+  .real_company {
+    overflow: hidden;
+  }
+  .real_company .main_container .real_company_cards {
+    overflow: visible;
+  }
+  .real_company .main_container .real_company_cards_pagination {
+    position: absolute;
+    z-index: 2;
+    bottom: 48px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .real_company .main_container .real_company_cards_pagination span {
+    margin: 0;
+    padding: 0;
+    width: 10px;
+    height: 10px;
+    opacity: 1;
+    background-color: #fff;
+  }
+  .real_company .main_container .real_company_cards_pagination .swiper-pagination-bullet-active {
+    background-color: #1D5DEB;
+  }
 }
 @media only screen and (max-width: 773px) {
   .services_history {
@@ -1159,6 +1304,7 @@ textarea[type=text]:focus {
     left: 0;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
   }
   .advantages .main_container {
     padding: 60px 0;
@@ -1298,8 +1444,14 @@ textarea[type=text]:focus {
     display: none;
   }
   .newsline .main_container .bg_number {
-    font-size: 80px;
-    top: 0;
+    top: auto;
+    bottom: 314px;
+    right: -309px;
+    font-size: 165.6px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 41.501px;
+    text-transform: uppercase;
   }
   .newsline .main_container h2 {
     font-size: 20px;
@@ -1450,5 +1602,37 @@ textarea[type=text]:focus {
     font-style: normal;
     font-weight: 400;
     line-height: 17px;
+  }
+  .scheme_work .title {
+    font-size: 20px;
+    margin-bottom: 7px;
+  }
+  .scheme_work .description {
+    font-size: 12px;
+    line-height: 18px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-bottom: 24px;
+  }
+  .scheme_work .sheme_work_slider .slide_content {
+    min-height: 201px;
+    padding: 25px 11px 25px 31px;
+  }
+  .scheme_work .sheme_work_slider .slide_content .number {
+    top: 33px;
+    right: 36px;
+  }
+  .scheme_work .sheme_work_slider .slide_content .slide_title {
+    font-size: 14px;
+  }
+  .scheme_work .sheme_work_slider .slide_content .slide_title br {
+    display: none;
+  }
+  .scheme_work .sheme_work_slider .slide_content .slide_description {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .scheme_work .description_2 {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
