--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -123,6 +123,8 @@
 .home {
     position: relative;
     background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+    overflow: hidden;
+
     .home_wrapper {
         overflow: hidden;
         max-width: 1920px;
@@ -148,6 +150,7 @@
             position: relative;
             z-index: 2;
         }
+        
         .home_text {
             margin-top: 74px;
             position: relative;
@@ -179,6 +182,7 @@
                 display: flex;
                 align-items: start;
                 gap: 26px;
+
                 a {
                     display: inline-flex;
                     align-items: center;
@@ -205,10 +209,12 @@
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
+
                 .home_bottom_block {
                     display: flex;
                     align-items: center;
                     gap: 20px;
+
                     span {
                         border-radius: 40px;
                         background: #FFF;
@@ -227,8 +233,10 @@
     }
 }
 
+
 .accident {
     padding: 100px 0 178px 0;
+
     .main_container {
         h2 {
             color: $main_text;
@@ -253,12 +261,9 @@
         }
 
         .accident_in {
-            display: flex;
-            align-items: center;
             .accident_card {
                 padding: 0 33px 0 117px;
                 position: relative;
-                width: 378px;
                 height: 130px;
                 overflow: hidden;
                 border-radius: 12px;
@@ -299,6 +304,10 @@
                     font-style: normal;
                     font-weight: 400;
                     line-height: 27px;
+
+                    a {
+                        color: #1D5DEB;
+                    }
                 }
             }
         }
@@ -627,6 +636,21 @@
 
         .scheme_work_1_pagination {
             display: none;
+        }
+    }
+
+    .accident {
+        .accident_in {
+            .swiper-wrapper {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 30px 33px;
+                justify-content: center;
+
+                .swiper-slide {
+                    width: calc(100% / 3 - 22px);
+                }
+            }
         }
     }
 }
