--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -652,6 +652,10 @@
                 }
             }
         }
+
+        .scheme_work_3_pagination {
+            display: none;
+        }
     }
 }
 
