--- a/pages/index.pug
+++ b/pages/index.pug
@@ -66,16 +66,42 @@ html(lang="en")
                                 p Далее следуйте подсказкам полученым от нашего оператора.
                 .scheme_work_3_pagination
 
-        //- section.assistance 
-        //-     .main_container 
-        //-         h2 Как работает наша служба помощи при ДТП
+        section.assistance 
+            .main_container 
+                h2 Как работает наша служба помощи при ДТП
 
-        //-         .assistance_in 
-        //-             .assistance_card 
-        //-                 img(src="./images/assistance1.png", alt="")
-
-        //-                 h4 Звонок
-        //-                 p Ваш звонок примет оператор и направит к Вам ближайшего комиссара.
+                .swiper.assistance_slider.assistance_in
+                    .swiper-wrapper
+                        .swiper-slide 
+                            .assistance_card 
+                                img(src="./images/assistance1.png", alt="")
+                                img.icon(src="./images/chevron_right.svg", alt="")
+                                h4 Звонок
+                                p Ваш звонок примет оператор и направит к Вам ближайшего комиссара.
+                        .swiper-slide 
+                            .assistance_card 
+                                img(src="./images/assistance_slide_2.svg", alt="")
+                                img.icon(src="./images/chevron_right.svg", alt="")
+                                h4 Звонок
+                                p Ваш звонок примет оператор и направит к Вам ближайшего комиссара.
+                        .swiper-slide 
+                            .assistance_card 
+                                img(src="./images/assistance1.png", alt="")
+                                img.icon(src="./images/chevron_right.svg", alt="")
+                                h4 Звонок
+                                p Ваш звонок примет оператор и направит к Вам ближайшего комиссара.
+                        .swiper-slide 
+                            .assistance_card 
+                                img(src="./images/assistance1.png", alt="")
+                                img.icon(src="./images/chevron_right.svg", alt="")
+                                h4 Звонок
+                                p Ваш звонок примет оператор и направит к Вам ближайшего комиссара.
+                        .swiper-slide 
+                            .assistance_card 
+                                img(src="./images/assistance1.png", alt="")
+                                img.icon(src="./images/chevron_right.svg", alt="")
+                                h4 Звонок
+                                p Ваш звонок примет оператор и направит к Вам ближайшего комиссара.
 
         //- section.help 
         //-     .main_container 
